--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.19",
     "@mantine/form": "^6.0.19",
-    "@mantine/hooks": "^6.0.19",
+    "@mantine/hooks": "^6.0.20",
     "@mantine/notifications": "^6.0.19",
     "@tabler/icons-react": "^2.31.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
     "firebase": "^10.3.1",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -28,7 +29,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.63.6",
+    "sass": "^1.68.0",
+    "store2": "^2.14.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
