--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ REACT_APP_FIREBASE_PROJECT_ID=kanban-e05cc
 REACT_APP_FIREBASE_STORAGE_BUCKET=kanban-e05cc.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=278921663226
 REACT_APP_FIREBASE_APP_ID=1:278921663226:web:b83b964ae0997510d4af43
+REACT_APP_BASE_URL=http://134.209.240.20
+REACT_APP_TOKENS_KEY=tokens
